cli/tests/snapshots/arguments__inspect_dump_super_full_all.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"inspect-internal\", \"dump-super\", \"-f\", \"-a\", \"/dev/sda1\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Inspect(
        InspectCommand {
            subcommand: DumpSuper(
                DumpSuperCommand {
                    path: "/dev/sda1",
                    full: true,
                    all: true,
                    mirror: None,
                    force: false,
                },
            ),
        },
    ),
}
