cli/tests/snapshots/arguments__inspect_inode_resolve_missing_args.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"inspect-internal\", \"inode-resolve\"])"
---
error: the following required arguments were not provided:
  <INODE>
  <PATH>
