cli/tests/snapshots/arguments__inspect_list_chunks.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"inspect-internal\", \"list-chunks\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Inspect(
        InspectCommand {
            subcommand: ListChunks(
                ListChunksCommand {
                    path: "/mnt",
                },
            ),
        },
    ),
}
