cli/tests/snapshots/arguments__inspect_min_dev_size.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"inspect-internal\", \"min-dev-size\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Inspect(
        InspectCommand {
            subcommand: MinDevSize(
                MinDevSizeCommand {
                    devid: 1,
                    path: "/mnt",
                },
            ),
        },
    ),
}
