cli/tests/snapshots/arguments__inspect_rootid.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"inspect-internal\", \"rootid\", \"/mnt/file\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Inspect(
        InspectCommand {
            subcommand: Rootid(
                RootidCommand {
                    path: "/mnt/file",
                },
            ),
        },
    ),
}
