cli/tests/snapshots/arguments__inspect_subvolid_resolve.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"inspect-internal\", \"subvolid-resolve\", \"256\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Inspect(
        InspectCommand {
            subcommand: SubvolidResolve(
                SubvolidResolveCommand {
                    subvolid: 256,
                    path: "/mnt",
                },
            ),
        },
    ),
}
