cli/tests/snapshots/arguments__property_get.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"property\", \"get\", \"/mnt/subvol\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Property(
        PropertyCommand {
            subcommand: Get(
                PropertyGetCommand {
                    object_type: None,
                    object: "/mnt/subvol",
                    name: None,
                },
            ),
        },
    ),
}
