cli/tests/snapshots/arguments__property_get_named.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"property\", \"get\", \"/mnt/subvol\", \"ro\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Property(
        PropertyCommand {
            subcommand: Get(
                PropertyGetCommand {
                    object_type: None,
                    object: "/mnt/subvol",
                    name: Some(
                        "ro",
                    ),
                },
            ),
        },
    ),
}
